--- a/BotTibia/MainWindow.xaml
+++ b/BotTibia/MainWindow.xaml
@@ -85,8 +85,39 @@
                     <Label x:Name="HeallingLabel" Content="HEALING" HorizontalAlignment="Left" Margin="252,4,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Foreground="White" Height="26" Width="88" Grid.Column="2"/>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="Cavebot" Header="Cavebot" Margin="32,-2,-60,0" Background="#FFB2B2B2" BorderBrush="#FFB2B2B2" Foreground="Black">
-                <Grid Background="#FF0F0E0E" Margin="-5,10,9,0" VerticalAlignment="Top" Height="535"/>
+            <TabItem x:Name="CavebotTab" Header="Cavebot" Margin="32,-2,-60,0" Background="#FFB2B2B2" BorderBrush="#FFB2B2B2" Foreground="Black">
+                <Grid Margin="-5,10,9,0" VerticalAlignment="Top" Height="535" Background="#FF0F0E0E">
+                    <ListView x:Name="listView" Margin="13,34,134,5">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="Waypoint" Width="410" />
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+
+                    <CheckBox x:Name="CavebotCheckBox" Checked="AtivarCaveBot" Unchecked="DesativarCaveBot" IsEnabled="False" Content="Ativar" HorizontalAlignment="Left" Margin="13,9,0,0" VerticalAlignment="Top" Foreground="White" Height="15" Width="51"/>
+                    <Label x:Name="CaveBotLabel" Content="CAVEBOT" HorizontalAlignment="Left" Margin="252,4,0,0" VerticalAlignment="Top" Foreground="White" Height="26" Width="88"/>
+                    <Grid Margin="405,91,9,232" VerticalAlignment="Center">
+
+                        <Button x:Name="ButtonNode" Content="Node" HorizontalAlignment="Left" VerticalAlignment="Top" Width="113" Height="25" RenderTransformOrigin="0.5,0.5"/>
+                        <Button x:Name="ButtonStand" Content="Stand" HorizontalAlignment="Left" Margin="0,30,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+                        <Button x:Name="ButtonWalk" Content="Walk" HorizontalAlignment="Left" Margin="0,60,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+                        <Button x:Name="ButtonUse" Content="Use" HorizontalAlignment="Left" Margin="0,90,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+                        <Button x:Name="ButtonUseItem" Content="UseItem" HorizontalAlignment="Left" Margin="0,120,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+                        <Button x:Name="ButtonLabel" Content="Label" HorizontalAlignment="Left" Margin="0,150,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+                        <Button x:Name="ButtonAction" Content="Action" HorizontalAlignment="Left" Margin="0,180,0,0" VerticalAlignment="Top" Width="113" Height="25"/>
+                    </Grid>
+                    <RadioButton x:Name="radioButtonNW" Content="NW" HorizontalAlignment="Left" Margin="402,309,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White" Width="41"/>
+                    <RadioButton x:Name="radioButtonN" Content="N" HorizontalAlignment="Left" Margin="450,309,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White" />
+                    <RadioButton x:Name="radioButtonNE" Content="NE" HorizontalAlignment="Left" Margin="489,310,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"  RenderTransformOrigin="0.33,0.561"/>
+                    <RadioButton x:Name="radioButtonW" Content="W" HorizontalAlignment="Left" Margin="402,331,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"  Width="41"/>
+                    <RadioButton x:Name="radioButtonC" Content="C" HorizontalAlignment="Left" Margin="450,331,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"  IsChecked="True" />
+                    <RadioButton x:Name="radioButtonE" Content="E" HorizontalAlignment="Left" Margin="489,332,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"  RenderTransformOrigin="0.33,0.561"/>
+                    <RadioButton x:Name="radioButtonSW" Content="SW" HorizontalAlignment="Left" Margin="402,351,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"  Width="41"/>
+                    <RadioButton x:Name="radioButtonS" Content="S" HorizontalAlignment="Left" Margin="450,351,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White" />
+                    <RadioButton x:Name="radioButtonSE" Content="SE" HorizontalAlignment="Left" Margin="489,352,0,0" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"  RenderTransformOrigin="0.33,0.561"/>
+
+                </Grid>
             </TabItem>
             <TabItem x:Name="Target" Header="Target" Margin="64,-2,-103,0" Background="#FFB2B2B2" BorderBrush="#FFB2B2B2" Foreground="Black">
                 <Grid Background="#FF0F0E0E" Margin="-5,10,9,0" VerticalAlignment="Top" Height="535"/>
