--- a/BotTibia/MainWindow.xaml
+++ b/BotTibia/MainWindow.xaml
@@ -2,9 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:BotTibia.Enum"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="MatthewBot" Height="630" Width="800" MinWidth="800" MinHeight="630" MaxWidth="800" MaxHeight="630" Foreground="{x:Null}" Background="{x:Null}" Icon="favicon-32x32.png">
+    <Window.Resources>
+        <ObjectDataProvider MethodName="GetValues" ObjectType="{x:Type sys:Enum}" x:Key="GetEnumValues">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="local:EnumLabel"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </Window.Resources>
     <Grid x:Name="Main" Background="#FFDADADA" Margin="1,-2,0,0" VerticalAlignment="Top" Height="600">
         <Menu Panel.ZIndex="9997" Margin="2,2,3,580" Background="#FFDADADA" Foreground="#FF000000">
             <MenuItem x:Name="File" Height="18" Width="40" Background="#FFDADADA" Header="File" Foreground="#FF000000">
@@ -88,30 +97,28 @@
             </TabItem>
             <TabItem x:Name="CavebotTab" Header="Cavebot" Margin="32,-2,-60,0" Background="#FFB2B2B2" BorderBrush="#FFB2B2B2" Foreground="Black">
                 <Grid Margin="-5,10,9,0" VerticalAlignment="Top" Height="535" Background="#FFDADADA">
-                    <ListView x:Name="listView" Margin="13,34,134,12" ItemsSource="{Binding Waypoint}" SelectionMode="Single" >
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
+                    <DataGrid x:Name="GridView" Margin="13,34,134,12" ItemsSource="{Binding Waypoints}" SelectionMode="Single" AutoGenerateColumns="False" CanUserAddRows="false" >
+                        <DataGrid.ItemContainerStyle>
+                            <Style TargetType="{x:Type DataGridRow}">
                                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                                <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_MouseDoubleClickEvent" />
+                                <EventSetter Event="PreviewMouseLeftButtonDown" Handler="DataGridItem_MouseClickEvent" />
                             </Style>
-                        </ListView.ItemContainerStyle>
-                        <ListView.ContextMenu>
+                        </DataGrid.ItemContainerStyle>
+                        <DataGrid.ContextMenu>
                             <ContextMenu>
                                 <MenuItem Header="Delete" Click="DeletaWaypoint"/>
                                 <MenuItem Header="Clear" Click="LimpaListaDeWaypoints"/>
                             </ContextMenu>
-                        </ListView.ContextMenu>
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn Header="Id" Width="40" DisplayMemberBinding="{Binding Index}" />
-                                <GridViewColumn Header="Type" Width="70" DisplayMemberBinding="{Binding Type}"  />
-                                <GridViewColumn Header="Label" Width="100" DisplayMemberBinding="{Binding Label}" />
-                                <GridViewColumn Header="Coordenada" Width="150" DisplayMemberBinding="{Binding Coordenada}" />
-                                <GridViewColumn Header="Range" Width="50" DisplayMemberBinding="{Binding Range}" />
-                                <GridViewColumn Header="Action" Width="200" DisplayMemberBinding="{Binding Action}" />
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                        </DataGrid.ContextMenu>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Id" Width="40" Binding="{Binding Index}" />
+                            <DataGridTextColumn Header="Type" Width="70" Binding="{Binding Type}"  />
+                            <DataGridComboBoxColumn Header="Label" Width="100" ItemsSource="{Binding Source={StaticResource GetEnumValues}}" SelectedValueBinding="{Binding Label}"  />
+                            <DataGridTextColumn Header="Coordenada" Width="150" Binding="{Binding Coordenada}" />
+                            <DataGridTextColumn Header="Range" Width="50" Binding="{Binding Range}" />
+                            <DataGridTextColumn Header="Action" Width="200" Binding="{Binding Action}" />
+                        </DataGrid.Columns>
+                    </DataGrid>
 
                     <CheckBox x:Name="CavebotCheckBox" Checked="AtivarCaveBot" Unchecked="DesativarCaveBot" IsEnabled="False" Content="Ativar" HorizontalAlignment="Left" Margin="13,9,0,0" VerticalAlignment="Top" Foreground="#FF000000" Height="15" Width="51"/>
                     <Label x:Name="CaveBotLabel" Content="CAVEBOT" HorizontalAlignment="Left" Margin="252,4,0,0" VerticalAlignment="Top" Foreground="#FF000000" Height="26" Width="88"/>
